--- a/styles/form.css
+++ b/styles/form.css
@@ -13,9 +13,10 @@
     width: 100%; }
   .form__input, .form__textarea {
     margin-bottom: 32px;
-    padding-bottom: 16px;
-    padding-top: 16px;
+    padding-bottom: 5px;
+    padding-top: 5px;
     width: 100%;
+    height: 46px;
     outline: none;
     border: none;
     border-bottom: 1px solid rgba(0, 0, 0, 0.3);
