--- a/styles/main.css
+++ b/styles/main.css
@@ -354,7 +354,7 @@ p {
 
 .submit-button {
   cursor: pointer;
-  width: 20%;
+  width: 30%;
   border: none;
   border-bottom: 1px dotted #333333;
   color: #333333;
@@ -878,9 +878,10 @@ p {
     width: 100%; }
   .form__input, .form__textarea {
     margin-bottom: 32px;
-    padding-bottom: 16px;
-    padding-top: 16px;
+    padding-bottom: 5px;
+    padding-top: 5px;
     width: 100%;
+    height: 46px;
     outline: none;
     border: none;
     border-bottom: 1px solid rgba(0, 0, 0, 0.3);
